services/api-gateway/manifests/api-gateway.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment-v1
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api-gateway
      version: v1
  template:
    metadata:
      labels:
        app: api-gateway
        version: v1
    spec:
      containers:
        - name: api-gateway
          image: api-gateway
          resources:
            requests:
              memory: "80Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "150m"
          ports:
            - containerPort: 9080
          livenessProbe:
            httpGet:
              path: /.well-known/apollo/server-health/
              port: 9080
            initialDelaySeconds: 3
            periodSeconds: 3
