services/api-gateway/manifests/api-gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: api-gateway
