services/api-gateway/manifests/api-gateway.destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-gateway
spec:
  host: api-gateway
  subsets:
    - name: v1
      labels:
        version: v1
