services/api-gateway/manifests/api-gateway.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: api-gateway
            port:
              number: 9080
